--- a/ProjectIKS/src/app/modules/layout/owner-navbar/owner-navbar.component.html
+++ b/ProjectIKS/src/app/modules/layout/owner-navbar/owner-navbar.component.html
@@ -3,6 +3,7 @@
   <div>
     <button (click)="Logout()" style="float: right" mat-raised-button >Logout</button>
     <button [routerLink]="['/edit-profile']"  style="float: right" mat-raised-button >Profile</button>
+    <button  (click)="addAccommodation()"  style="float: right" mat-raised-button >Add accommodation</button>
 
   </div>
 </mat-toolbar>
