--- a/ProjectIKS/src/app/modules/accommodations/accommodation-create/accommodation-create.component.html
+++ b/ProjectIKS/src/app/modules/accommodations/accommodation-create/accommodation-create.component.html
@@ -3,75 +3,129 @@
     <h1>Add Accomodation</h1>
   </div>
   <div class="container">
-    <form [formGroup]="accommodation">
+    <form>
       <div class="container">
         <form>
           <div class="form-group">
-            <input type="text" placeholder="name" name="name" required>
+            <input type="text" placeholder="name" name="name" id="name" required>
           </div>
 
           <div class="form-group">
-            <input type="text" placeholder="min people" name="minPeople" required>
+            <input type="text" placeholder="min people" name="minPeople" id="minPeople" required>
           </div>
 
           <div class="form-group">
-            <input type="text" placeholder="max people" name="maxPeople" required>
+            <input type="text" placeholder="max people" name="maxPeople" id="maxPeople" required>
           </div>
 
           <div class="form-group">
-            <input type="text" placeholder="ammineity with ," name="ammineity" required>
+            <input type="text" placeholder="ammineity with ," name="ammineity"  id="ammineity" required>
           </div>
 
           <div class="form-group">
-            <input type="text" placeholder="weekend price" name="weekendPrice" required>
+            <input type="text" placeholder="weekend price" name="weekendPrice" id="weekendPrice" required>
           </div>
 
           <div class="form-group">
-            <input type="text" placeholder="holiday price" name="holidayPrice" required>
+            <input type="text" placeholder="holiday price" name="holidayPrice" id="holidayPrice" required>
           </div>
 
           <div class="form-group">
-            <input type="text" placeholder="summer/winter price" name="summerPrice" required>
+            <input type="text" placeholder="summer/winter price" name="summerPrice" id="summerPrice" required>
           </div>
 
           <div class="form-group">
-            <input type="text" placeholder="country" name="country" required>
+            <input type="text" placeholder="country" name="country" id="country" required>
           </div>
 
           <div class="form-group">
-            <input type="text" placeholder="city" name="city" required>
+            <input type="text" placeholder="city" name="city" id="city" required>
           </div>
 
           <div class="form-group">
-            <input type="text" placeholder="street" name="street" required>
+            <input type="text" placeholder="street" name="street" id="street" required>
           </div>
 
           <div class="form-group">
-            <input type="text" placeholder="number" name="number" required>
+            <input type="text" placeholder="number" name="number" id="number" required>
           </div>
 
           <div class="form-group">
-            <input type="text" placeholder="limit for cancel reservation" name="limit" required>
+            <input type="text" placeholder="limit for cancel reservation" name="limit" id="limit" required>
           </div>
 
           <div class="form-group">
-            <input type="text" placeholder="description" name="describe" required>
+            <input type="text" placeholder="description" name="describe" id="describe" required>
           </div>
 
-          <mat-radio-group class="radio-group" (change)="onUserTypeChange($event)">
-            <mat-radio-button id="isNightRadio" value="night" class="white-text">Per Night</mat-radio-button>
-            <mat-radio-button value="person" class="white-text">Per Person</mat-radio-button>
-          </mat-radio-group>
+          <div class="radio-group">
+            <label>
+              <input type="radio" id="automaticConfirmation" name="confirmation"/>
+              Automatic Confirmation
+            </label>
 
-          <mat-radio-group class="radio-group" (change)="onConfirmationTypeChange($event)">
-            <mat-radio-button id="autoConf" value="yes" class="white-text">Automatic Confirmation</mat-radio-button>
-            <mat-radio-button value="no" class="white-text">No Automatic</mat-radio-button>
-          </mat-radio-group>
+            <label>
+              <input type="radio" id="automaticConfirmation2" name="confirmation"/>
+              No Automatic
+            </label>
+          </div>
 
-          <mat-radio-group class="radio-group" (change)="onTypeAccChange($event)">
-            <mat-radio-button id="accType" value="apartman" class="white-text">Apartman</mat-radio-button>
-            <mat-radio-button value="room" class="white-text">Room</mat-radio-button>
-          </mat-radio-group>
+          <div class="radio-group">
+            <label>
+              <input type="radio" id="tip1" name="tipSobe"/>
+              Room
+            </label>
+
+            <label>
+              <input type="radio" id="tip2" name="tipSobe"/>
+              Apartman
+            </label>
+          </div>
+
+          <div class="radio-group">
+            <label>
+              <input type="radio" id="night" name="priceType"/>
+              Night
+            </label>
+
+            <label>
+              <input type="radio" id="person" name="priceType"/>
+              Person
+            </label>
+          </div>
+
+          <!--          <mat-radio-group class="radio-group" (change)="onUserTypeChange($event)">-->
+          <!--            <mat-radio-button id="isNightRadio" value="night" class="white-text">Per Night</mat-radio-button>-->
+          <!--            <mat-radio-button value="person" class="white-text">Per Person</mat-radio-button>-->
+          <!--          </mat-radio-group>-->
+
+          <!--          <mat-radio-group class="radio-group" (change)="onConfirmationTypeChange($event)">-->
+          <!--            <mat-radio-button id="autoConf" value="yes" class="white-text">Automatic Confirmation</mat-radio-button>-->
+          <!--            <mat-radio-button value="no" class="white-text">No Automatic</mat-radio-button>-->
+          <!--          </mat-radio-group>-->
+
+          <!--          <mat-radio-group class="radio-group" (change)="onTypeAccChange($event)">-->
+          <!--            <mat-radio-button id="accType" value="apartman" class="white-text">Apartman</mat-radio-button>-->
+          <!--            <mat-radio-button value="room" class="white-text">Room</mat-radio-button>-->
+          <!--          </mat-radio-group>-->
+          <!--          <form [formGroup]="dateRangeForm">-->
+
+          <!--            <div class="form-group">-->
+          <!--              <input placeholder="basic price" name="price" required>-->
+          <!--            </div>-->
+
+          <!--            <mat-form-field>-->
+          <!--              <mat-label>Enter a date range</mat-label>-->
+          <!--              <mat-date-range-input [rangePicker]="picker">-->
+          <!--                <input matStartDate="startDate" placeholder="Start date">-->
+          <!--                <input matEndDate="endDate" placeholder="End date">-->
+          <!--              </mat-date-range-input>-->
+          <!--              <mat-hint>MM/DD/YYYY – MM/DD/YYYY</mat-hint>-->
+          <!--              <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>-->
+          <!--              <mat-date-range-picker #picker></mat-date-range-picker>-->
+          <!--            </mat-form-field>-->
+          <!--          </form>-->
+
           <form [formGroup]="dateRangeForm">
 
             <div class="form-group">
@@ -123,7 +177,7 @@
           </div>
 
           <div class="button-group">
-            <button type="submit" class="save-button" (click)="accommodationClicked()">Add Accommodation</button>
+            <button type="submit" class="save-button" (click)="saveChanges()">Add Accommodation</button>
           </div>
         </form>
       </div>
@@ -132,4 +186,3 @@
     </form>
   </div>
 </div>
-
