--- a/ProjectIKS/src/app/modules/accommodations/accommodation-cards/accommodation-cards.component.html
+++ b/ProjectIKS/src/app/modules/accommodations/accommodation-cards/accommodation-cards.component.html
@@ -1,3 +1,3 @@
 <div *ngFor="let accommodation of accommodations" style="margin-left: 5%; margin-right: 5%;" >
-  <app-accommodation-card *ngIf="loginService.hasRole('Guest') || loginService.hasRole('Owner') || loginService.hasRole('Admin')"  (clicked)="onAccommodationClicked($event)" [accommodation]="accommodation"></app-accommodation-card>
+  <app-accommodation-card *ngIf="loginService.hasRole('Guest') || loginService.hasRole('Owner') || loginService.hasRole('User')"  (clicked)="onAccommodationClicked($event)" [accommodation]="accommodation"></app-accommodation-card>
 </div>
