--- a/ProjectIKS/src/app/modules/accommodations/accommodation-details/accommodation-details.component.html
+++ b/ProjectIKS/src/app/modules/accommodations/accommodation-details/accommodation-details.component.html
@@ -1,4 +1,4 @@
-<app-navbar></app-navbar>
+<!--<app-navbar></app-navbar>-->
 <div class="details-accommodation-container">
   <div class="details-accommodation-details">
     <p>Describe: {{accommodation.description}}</p>
