--- a/ProjectIKS/src/app/modules/guest/guest-reviews/guest-reviews.component.html
+++ b/ProjectIKS/src/app/modules/guest/guest-reviews/guest-reviews.component.html
@@ -35,7 +35,7 @@
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef> Actions </th>
       <td mat-cell *matCellDef="let element">
-        <button mat-button (click)="deleteRequest(element)" >Click Me</button>
+        <button mat-button (click)="deleteRequest(element)" >Delete request</button>
       </td>
     </ng-container>
 
