--- a/ProjectIKS/src/app/modules/profile/edit-profile/edit-profile.component.html
+++ b/ProjectIKS/src/app/modules/profile/edit-profile/edit-profile.component.html
@@ -18,11 +18,11 @@
             <input type="text" placeholder="Surname" name="surname" id="surname" required>
           </div>
 
-          <div class="form-group" *ngIf="loginService.getRole() != 'ROLE_Admin'">
+          <div class="form-group" *ngIf="loginService.getRole() != 'ROLE_Administrator'">
             <input  type="text" id="address" placeholder="Address" name="address"  required>
           </div>
 
-          <div class="form-group" *ngIf="loginService.getRole() != 'ROLE_Admin'">
+          <div class="form-group" *ngIf="loginService.getRole() != 'ROLE_Administrator'">
             <input type="tel" id="phone" placeholder="Phone" name="phone"  required>
           </div>
 
