Added  page for owners personal accommodations.

--- a/ProjectIKS/src/app/modules/layout/owner-navbar/owner-navbar.component.html
+++ b/ProjectIKS/src/app/modules/layout/owner-navbar/owner-navbar.component.html
@@ -2,8 +2,10 @@
   <span >Booking</span>
   <div>
     <button (click)="Logout()" style="float: right" mat-raised-button >Logout</button>
-    <button [routerLink]="['/edit-profile']"  style="float: right" mat-raised-button >Profile</button>
+    <button (click)="viewProfile()" style="float: right" mat-raised-button >Profile</button>
     <button  (click)="addAccommodation()"  style="float: right" mat-raised-button >Add accommodation</button>
+    <button   (click)="myAccommodations()" style="float: right" mat-raised-button >My accommodations</button>
+    <button   (click)="home()" style="float: right" mat-raised-button >Home</button>
 
   </div>
 </mat-toolbar>
