Implemented owner reservation management

--- a/ProjectIKS/src/app/modules/layout/owner-navbar/owner-navbar.component.html
+++ b/ProjectIKS/src/app/modules/layout/owner-navbar/owner-navbar.component.html
@@ -5,6 +5,7 @@
     <button (click)="viewProfile()" style="float: right" mat-raised-button >Profile</button>
     <button  (click)="addAccommodation()"  style="float: right" mat-raised-button >Add accommodation</button>
     <button   (click)="myAccommodations()" style="float: right" mat-raised-button >My accommodations</button>
+    <button  (click)="viewReservations()" style="float: right" mat-raised-button >Reservations </button>
     <button   (click)="home()" style="float: right" mat-raised-button >Home</button>
 
   </div>
