--- a/ProjectIKS/src/app/modules/layout/guest-navbar/guest-navbar.component.html
+++ b/ProjectIKS/src/app/modules/layout/guest-navbar/guest-navbar.component.html
@@ -6,7 +6,8 @@
     <button [routerLink]="['']"  style="float: right" mat-raised-button >Notifications</button>
     <button (click)="viewReviews()"  style="float: right" mat-raised-button >Reviews</button>
     <button (click)="Logout()" style="float: right" mat-raised-button >Logout</button>
-
+    <button (click)="RateOwner()" style="float: right" mat-raised-button >Rate Owner</button>
+    <button (click)="RateAccommodation()" style="float: right" mat-raised-button >Rate Accommodation</button>
   </div>
 </mat-toolbar>
 
