--- a/ProjectIKS/src/app/modules/review/review-card/review-card.component.css
+++ b/ProjectIKS/src/app/modules/review/review-card/review-card.component.css
@@ -1,8 +1,7 @@
 mat-card {
   background-color: #ADD8E6;
   color: white;
-  margin: 30px;
-  width:80%;
+  margin: 30px
 }
 .b-description {
   text-align: center;
@@ -19,4 +18,23 @@ mat-card {
   font-size: 18px;
   margin-left: 30px;
   margin-right: 30px;
+}
+
+.btn-stilizovano {
+  width: 40%;
+  align-items: center;
+  background-color: #6a7979;
+  border: none;
+  color: white;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin-left: 50px;
+  margin-bottom: 50px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  border-radius: 12px;
+  box-shadow: 0 4px #999;
 }
