add delete reviews

--- a/ProjectIKS/src/app/modules/layout/owner-navbar/owner-navbar.component.html
+++ b/ProjectIKS/src/app/modules/layout/owner-navbar/owner-navbar.component.html
@@ -6,6 +6,9 @@
     <button  (click)="addAccommodation()"  style="float: right" mat-raised-button >Add accommodation</button>
     <button   (click)="myAccommodations()" style="float: right" mat-raised-button >My accommodations</button>
     <button  (click)="viewReservations()" style="float: right" mat-raised-button >Reservations </button>
+    <button   (click)="viewGuests()" style="float: right" mat-raised-button >Report Guests</button>
+    <button   (click)="viewCommentGuests()" style="float: right" mat-raised-button >Guests comm</button>
+    <button   (click)="viewCommentAccommodation()" style="float: right" mat-raised-button >Acc comm</button>
     <button   (click)="home()" style="float: right" mat-raised-button >Home</button>
 
   </div>
