--- a/ProjectIKS/src/app/modules/review/review-owner-card/review-owner-card.component.html
+++ b/ProjectIKS/src/app/modules/review/review-owner-card/review-owner-card.component.html
@@ -8,6 +8,6 @@
     <button  class="btn-stilizovano" (click)="AddReview(owner.id)" >Rate owner</button>
     <button  class="btn-stilizovano " (click)="ViewReview(owner.id)">View rate</button>
     <button  class="btn-stilizovano" (click)="DeleteReview(owner.id)">Delete rate</button>
-    <button  class="btn-stilizovano">Report owner</button>
+    <button  class="btn-stilizovano" (click)="ReportReview(owner.id)">Report owner</button>
   </mat-card-content>
 </mat-card>
