add favourite accommodation for guest

--- a/ProjectIKS/src/app/modules/layout/owner-navbar/owner-navbar.component.html
+++ b/ProjectIKS/src/app/modules/layout/owner-navbar/owner-navbar.component.html
@@ -6,6 +6,8 @@
     <button  (click)="addAccommodation()"  style="float: right" mat-raised-button >Add accommodation</button>
     <button   (click)="myAccommodations()" style="float: right" mat-raised-button >My accommodations</button>
     <button  (click)="viewReservations()" style="float: right" mat-raised-button >Reservations </button>
+    <button  (click)="viewReports()" style="float: right" mat-raised-button >Reports </button>
+    <button  (click)="viewRequests()" style="float: right" mat-raised-button >Requests </button>
     <button   (click)="home()" style="float: right" mat-raised-button >Home</button>
 
   </div>
