--- a/ProjectIKS/src/app/modules/unregistered-user/unregistered-user-home/unregistered-user-home.component.html
+++ b/ProjectIKS/src/app/modules/unregistered-user/unregistered-user-home/unregistered-user-home.component.html
@@ -1,3 +1,4 @@
 <app-unregistered-user-navbar></app-unregistered-user-navbar>
 <app-search></app-search>
+<!--<app-filter-review></app-filter-review>-->
 <app-accommodation-cards></app-accommodation-cards>
