--- a/ProjectIKS/src/app/modules/accommodations/accommodation-card/accommodation-card.component.html
+++ b/ProjectIKS/src/app/modules/accommodations/accommodation-card/accommodation-card.component.html
@@ -13,6 +13,7 @@
         <p class="p-description">Average rating: {{accommodation.rating}}</p>
         <p class="p-description">Price : 3000</p>
         <button  class="btn-stilizovano" *ngIf="isOwnersUrl()" (click)="openEditDialogue(accommodation.id)" >Edit accommodation</button>
+        <button  class="btn-stilizovano" *ngIf="loginService.hasRole('Guest')" (click)="editFavouriteAccommodations($event,accommodation.id)"> {{ getButtonLabel() }}</button>
       </div>
     </div>
   </mat-card-content>
