--- a/ProjectIKS/src/app/modules/accommodations/accommodation-create/accommodation-create.component.html
+++ b/ProjectIKS/src/app/modules/accommodations/accommodation-create/accommodation-create.component.html
@@ -65,7 +65,7 @@
             </label>
 
             <label>
-              <input type="radio" id="automaticConfirmation2" name="confirmation"/>
+              <input type="radio" id="automaticConfirmation2" name="confirmation" checked/>
               No Automatic
             </label>
           </div>
@@ -93,78 +93,6 @@
               Person
             </label>
           </div>
-
-          <!--          <mat-radio-group class="radio-group" (change)="onUserTypeChange($event)">-->
-          <!--            <mat-radio-button id="isNightRadio" value="night" class="white-text">Per Night</mat-radio-button>-->
-          <!--            <mat-radio-button value="person" class="white-text">Per Person</mat-radio-button>-->
-          <!--          </mat-radio-group>-->
-
-          <!--          <mat-radio-group class="radio-group" (change)="onConfirmationTypeChange($event)">-->
-          <!--            <mat-radio-button id="autoConf" value="yes" class="white-text">Automatic Confirmation</mat-radio-button>-->
-          <!--            <mat-radio-button value="no" class="white-text">No Automatic</mat-radio-button>-->
-          <!--          </mat-radio-group>-->
-
-          <!--          <mat-radio-group class="radio-group" (change)="onTypeAccChange($event)">-->
-          <!--            <mat-radio-button id="accType" value="apartman" class="white-text">Apartman</mat-radio-button>-->
-          <!--            <mat-radio-button value="room" class="white-text">Room</mat-radio-button>-->
-          <!--          </mat-radio-group>-->
-          <!--          <form [formGroup]="dateRangeForm">-->
-
-          <!--            <div class="form-group">-->
-          <!--              <input placeholder="basic price" name="price" required>-->
-          <!--            </div>-->
-
-          <!--            <mat-form-field>-->
-          <!--              <mat-label>Enter a date range</mat-label>-->
-          <!--              <mat-date-range-input [rangePicker]="picker">-->
-          <!--                <input matStartDate="startDate" placeholder="Start date">-->
-          <!--                <input matEndDate="endDate" placeholder="End date">-->
-          <!--              </mat-date-range-input>-->
-          <!--              <mat-hint>MM/DD/YYYY – MM/DD/YYYY</mat-hint>-->
-          <!--              <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>-->
-          <!--              <mat-date-range-picker #picker></mat-date-range-picker>-->
-          <!--            </mat-form-field>-->
-          <!--          </form>-->
-
-<!--          <form [formGroup]="dateRangeForm">-->
-
-<!--            <div class="form-group">-->
-<!--              <input placeholder="basic price" name="price" required>-->
-<!--            </div>-->
-
-<!--            <mat-form-field>-->
-<!--              <mat-label>Enter a date range</mat-label>-->
-<!--              <mat-date-range-input [rangePicker]="picker">-->
-<!--                <input matStartDate formControlName="startDate" placeholder="Start date">-->
-<!--                <input matEndDate formControlName="endDate" placeholder="End date">-->
-<!--              </mat-date-range-input>-->
-<!--              <mat-hint>MM/DD/YYYY – MM/DD/YYYY</mat-hint>-->
-<!--              <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>-->
-<!--              <mat-date-range-picker #picker></mat-date-range-picker>-->
-<!--            </mat-form-field>-->
-<!--          </form>-->
-
-<!--          <table mat-table [dataSource]="dataSource">-->
-<!--            &lt;!&ndash; Column definitions &ndash;&gt;-->
-<!--            <ng-container matColumnDef="firstDate">-->
-<!--              <th mat-header-cell *matHeaderCellDef>firstDate</th>-->
-<!--              <td mat-cell *matCellDef="let element">{{ element.firstDate }}</td>-->
-<!--            </ng-container>-->
-
-<!--            <ng-container matColumnDef="endDate">-->
-<!--              <th mat-header-cell *matHeaderCellDef>secondDate</th>-->
-<!--              <td mat-cell *matCellDef="let element">{{ element.endDate }}</td>-->
-<!--            </ng-container>-->
-
-<!--            <ng-container matColumnDef="price">-->
-<!--              <th mat-header-cell *matHeaderCellDef>Price</th>-->
-<!--              <td mat-cell *matCellDef="let element">{{ element.price }}</td>-->
-<!--            </ng-container>-->
-
-<!--            &lt;!&ndash; Table rows &ndash;&gt;-->
-<!--            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>-->
-<!--            <tr mat-row *matRowDef="let element; columns: displayedColumns;"></tr>-->
-<!--          </table>-->
           <mat-form-field [formGroup]="dateRangeForm">
             <mat-label>Enter a date range</mat-label>
             <mat-date-range-input [rangePicker]="picker">
