--- a/ProjectIKS/src/app/modules/layout/guest-navbar/guest-navbar.component.html
+++ b/ProjectIKS/src/app/modules/layout/guest-navbar/guest-navbar.component.html
@@ -5,6 +5,7 @@
     <button [routerLink]="['']"  style="float: right" mat-raised-button >Reservations</button>
     <button [routerLink]="['']"  style="float: right" mat-raised-button >Notifications</button>
     <button (click)="viewReviews()"  style="float: right" mat-raised-button >Reviews</button>
+    <button (click)="favouriteAccommodations()" style="float: right" mat-raised-button >Favourite accommodations</button>
     <button (click)="Logout()" style="float: right" mat-raised-button >Logout</button>
 
   </div>
