add search and filter reviews

--- a/ProjectIKS/src/app/modules/accommodations/accommodation-details/accommodation-details.component.html
+++ b/ProjectIKS/src/app/modules/accommodations/accommodation-details/accommodation-details.component.html
@@ -4,7 +4,8 @@
     <p>Describe: {{accommodation.description}}</p>
     <p>Minimum people: {{accommodation.minPeople}}</p>
     <p>Maximum people: {{accommodation.maxPeople}}</p>
-    <p>Owner: {{accommodation.maxPeople}}</p>
+    <p>Owner: {{accommodation.owner.name}} {{accommodation.owner.surname}}  </p>
+    <p>Automatic confirmation: {{accommodation.automaticConfirmation}}</p>
   </div>
 
   <p style="font-size: 20px;font-family: 'Adobe Fangsong Std R'">Location</p>
