--- a/ProjectIKS/src/app/modules/guest/guest-reviews/guest-reviews.component.html
+++ b/ProjectIKS/src/app/modules/guest/guest-reviews/guest-reviews.component.html
@@ -1,8 +1,8 @@
 <app-guest-navbar></app-guest-navbar>
 
 <div class="mat-elevation-z8">
+  <label >MY NON-ACCEPTED REVIEWS</label>
   <table mat-table [dataSource]="dataSource">
-
     <ng-container matColumnDef="id">
       <th mat-header-cell *matHeaderCellDef> id </th>
       <td mat-cell *matCellDef="let element"> {{element.id}} </td>
@@ -41,6 +41,49 @@
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+
+  <mat-paginator [pageSizeOptions]="[5, 10, 20]"
+                 showFirstLastButtons
+                 aria-label="Select page of periodic elements">
+  </mat-paginator>
+</div>
+
+<div class="mat-elevation-z8">
+  <label >MY ALL REVIEWS</label>
+  <table mat-table [dataSource]="dataSourceAllReviews">
+    <ng-container matColumnDef="id">
+      <th mat-header-cell *matHeaderCellDef> id </th>
+      <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="numberOfNights">
+      <th mat-header-cell *matHeaderCellDef> nights </th>
+      <td mat-cell *matCellDef="let element"> {{element.numberOfNights}} </td>
+    </ng-container>
+
+    <!-- Weight Column -->
+    <ng-container matColumnDef="price">
+      <th mat-header-cell *matHeaderCellDef> total price </th>
+      <td mat-cell *matCellDef="let element"> {{element.totalPrice}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="start-end">
+      <th mat-header-cell *matHeaderCellDef> start-end </th>
+      <td mat-cell *matCellDef="let element"> {{element.startDate}}-{{element.endDate}} </td>
+    </ng-container>
+    <ng-container matColumnDef="accommodation">
+      <th mat-header-cell *matHeaderCellDef> accommodation </th>
+      <td mat-cell *matCellDef="let element"> {{element.accommodation.location.city}}, {{element.accommodation.location.street}} </td>
+    </ng-container>
+    <ng-container matColumnDef="status">
+      <th mat-header-cell *matHeaderCellDef> status </th>
+      <td mat-cell *matCellDef="let element"> {{element.status}} </td>
+    </ng-container>
+
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumnsAllReviews"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumnsAllReviews;"></tr>
   </table>
 
   <mat-paginator [pageSizeOptions]="[5, 10, 20]"
