--- a/ProjectIKS/src/app/modules/layout/owner-navbar/owner-navbar.component.html
+++ b/ProjectIKS/src/app/modules/layout/owner-navbar/owner-navbar.component.html
@@ -11,6 +11,7 @@
     <button   (click)="viewCommentAccommodation()" style="float: right" mat-raised-button >Acc comm</button>
     <button  (click)="viewReports()" style="float: right" mat-raised-button >Reports </button>
     <button  (click)="viewRequests()" style="float: right" mat-raised-button >Requests </button>
+    <button  (click)="viewNotification()" style="float: right" mat-raised-button >New Notification </button>
     <button   (click)="home()" style="float: right" mat-raised-button >Home</button>
 
   </div>
