Implemented guest reservation cancellation system.

--- a/ProjectIKS/src/app/modules/layout/guest-navbar/guest-navbar.component.html
+++ b/ProjectIKS/src/app/modules/layout/guest-navbar/guest-navbar.component.html
@@ -2,7 +2,7 @@
   <span (click)="toHome()" >Booking</span>
   <div>
    <button (click)="EditProfile()" style="float: right" mat-raised-button >Profile</button>
-    <button [routerLink]="['']"  style="float: right" mat-raised-button >Reservations</button>
+    <button (click)="GuestReservations()" style="float: right" mat-raised-button >Reservations</button>
     <button [routerLink]="['']"  style="float: right" mat-raised-button >Notifications</button>
     <button (click)="viewReviews()"  style="float: right" mat-raised-button >Reviews</button>
     <button (click)="favouriteAccommodations()" style="float: right" mat-raised-button >Favourite accommodations</button>
