Implemented blocking user based on user reports.

--- a/ProjectIKS/src/app/modules/layout/administrator-navbar/administrator-navbar.component.html
+++ b/ProjectIKS/src/app/modules/layout/administrator-navbar/administrator-navbar.component.html
@@ -3,6 +3,7 @@
   <div>
     <button (click)="EditProfile()"  style="float: right" mat-raised-button >Profile</button>
     <button (click)="Aprove()" style="float: right" mat-raised-button >Approve</button>
+    <button (click)="UserReports()" style="float: right" mat-raised-button >User reports</button>
     <button  style="float: right" mat-raised-button >Notifications</button>
     <button  (click)="Logout()" style="float: right" mat-raised-button >Logout</button>
   </div>
