--- a/ProjectIKS/src/app/modules/layout/administrator-navbar/administrator-navbar.component.html
+++ b/ProjectIKS/src/app/modules/layout/administrator-navbar/administrator-navbar.component.html
@@ -4,6 +4,7 @@
     <button (click)="EditProfile()"  style="float: right" mat-raised-button >Profile</button>
     <button (click)="Aprove()" style="float: right" mat-raised-button >Approve</button>
     <button (click)="UserReports()" style="float: right" mat-raised-button >User reports</button>
+    <button (click)="ReviewReports()" style="float: right" mat-raised-button >Reviews reports</button>
     <button  style="float: right" mat-raised-button >Notifications</button>
     <button  (click)="Logout()" style="float: right" mat-raised-button >Logout</button>
   </div>
