finish angluar testing

--- a/ProjectIKS/src/app/modules/layout/owner-navbar/owner-navbar.component.html
+++ b/ProjectIKS/src/app/modules/layout/owner-navbar/owner-navbar.component.html
@@ -1,10 +1,10 @@
 <mat-toolbar>
-  <span >Booking</span>
+  <h1 class="title">Booking Owner</h1>
   <div>
     <button (click)="Logout()" style="float: right" mat-raised-button >Logout</button>
     <button (click)="viewProfile()" style="float: right" mat-raised-button >Profile</button>
     <button  (click)="addAccommodation()"  style="float: right" mat-raised-button >Add accommodation</button>
-    <button   (click)="myAccommodations()" style="float: right" mat-raised-button >My accommodations</button>
+    <button   (click)="myAccommodations()" style="float: right" mat-raised-button id="myAccommodation">My accommodations</button>
     <button  (click)="viewReservations()" style="float: right" mat-raised-button >Reservations </button>
     <button   (click)="viewGuests()" style="float: right" mat-raised-button >Report Guests</button>
     <button   (click)="viewCommentGuests()" style="float: right" mat-raised-button >Guests comm</button>
@@ -13,6 +13,5 @@
     <button  (click)="viewRequests()" style="float: right" mat-raised-button >Requests </button>
     <button  (click)="viewNotification()" style="float: right" mat-raised-button >New Notification </button>
     <button   (click)="home()" style="float: right" mat-raised-button >Home</button>
-
   </div>
 </mat-toolbar>
