--- a/ProjectIKS/src/app/modules/accommodations/accommodation-edit/accommodation-edit.component.html
+++ b/ProjectIKS/src/app/modules/accommodations/accommodation-edit/accommodation-edit.component.html
@@ -59,7 +59,7 @@
 
           <div class="button-group">
             <button mat-raised-button class="delete-button" (click)="openCancelDialog()" >Cancel</button>
-            <button mat-raised-button class="save-button" (click)="changePrices($event)" > Change Prices</button>
+            <button mat-raised-button class="save-button" (click)="changePrices($event)" id="changePrices"> Change Prices</button>
             <button mat-raised-button class="save-button"  (click)="saveChanges()" >Save</button>
           </div>
         </form>
@@ -141,12 +141,12 @@
               </table>
 
               <div class="button-group">
-                <button type="submit" class="save-button" (click)="addNewRow()">Add date</button>
+                <button type="submit" class="save-button" (click)="addNewRow()" id="addDate">Add date</button>
               </div>
 
               <div class="button-group">
                 <button  class="save-button" (click)="closeChangePrice($event)" >Cancel</button>
-                <button class="save-button" (click)="savePrices($event)">Save</button>
+                <button class="save-button" (click)="savePrices($event)" id="definitionSaveButton">Save</button>
               </div>
             </form>
           </div>
