--- a/ProjectIKS/src/app/modules/accommodations/accommodation-card/accommodation-card.component.html
+++ b/ProjectIKS/src/app/modules/accommodations/accommodation-card/accommodation-card.component.html
@@ -11,7 +11,7 @@
         </b>
         <p class="p-description">Details: {{accommodation.description}}</p>
         <p class="p-description">Average rating: {{accommodation.rating}}</p>
-        <p class="p-description">Price : 3000</p>
+        <p class="p-description">Price : {{ todayPrice }} </p>
         <button  class="btn-stilizovano" *ngIf="isOwnersUrl()" (click)="openEditDialogue(accommodation.id)" >Edit accommodation</button>
         <button  class="btn-stilizovano" *ngIf="loginService.hasRole('Guest')" (click)="editFavouriteAccommodations($event,accommodation.id)"> {{ getButtonLabel() }}</button>
       </div>
