--- a/ProjectIKS/src/app/modules/layout/search/search.component.html
+++ b/ProjectIKS/src/app/modules/layout/search/search.component.html
@@ -42,10 +42,10 @@
 </mat-toolbar>
 <div style="margin: 0 auto;  text-align: center;">
   <section class="example-section" style="display: inline-block; vertical-align: top;">
-    <mat-checkbox class="example-margin" [(ngModel)]="wifi">WIFI</mat-checkbox>
-    <mat-checkbox class="example-margin" [(ngModel)]="parking">Parking</mat-checkbox>
-    <mat-checkbox class="example-margin" [(ngModel)]="airConditioning">Air-conditioning</mat-checkbox>
-    <mat-checkbox class="example-margin" [(ngModel)]="kitchen">Kitchen</mat-checkbox>
+    <mat-checkbox class="example-margin" [(ngModel)]="wifi" id="wifi">WIFI</mat-checkbox>
+    <mat-checkbox class="example-margin" [(ngModel)]="parking" id="parking">Parking</mat-checkbox>
+    <mat-checkbox class="example-margin" [(ngModel)]="airConditioning" id="air">Air-conditioning</mat-checkbox>
+    <mat-checkbox class="example-margin" [(ngModel)]="kitchen" id="kitchen">Kitchen</mat-checkbox>
   </section>
   <form style="display: inline-block; vertical-align: top;">
     <mat-form-field style="width: 200px; margin-left: 50px;" class="price-form-field" appearance="outline">
