--- a/ProjectIKS/src/app/modules/layout/unregistered-user-navbar/unregistered-user-navbar.component.html
+++ b/ProjectIKS/src/app/modules/layout/unregistered-user-navbar/unregistered-user-navbar.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar>
-  <span (click)="toHome()" >Booking</span>
+  <h1 (click)="toHome()" class="title">Booking</h1>
   <div>
-    <button (click)="toLogin()" style="float: right" mat-raised-button >Login</button>
+    <button (click)="toLogin()" style="float: right" mat-raised-button id="login">Login</button>
     <button (click)="toSignup()"  style="float: right" mat-raised-button >Signup</button>
   </div>
 </mat-toolbar>
