fin ang testing

--- a/ProjectIKS/src/app/modules/review/view-notification-card/view-notification-card.component.css
+++ b/ProjectIKS/src/app/modules/review/view-notification-card/view-notification-card.component.css
@@ -21,3 +21,16 @@ mat-card {
   margin-right: 30px;
 }
 
+.btn-stilizovano {
+  background-color: #808080; /* Siva pozadina */
+  border: none;
+  color: white;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 4px; /* Blago zaobljeni uglovi */
+}
