--- a/ProjectIKS/src/app/modules/review/report-accommodation-comment-card/report-accommodation-comment-card.component.css
+++ b/ProjectIKS/src/app/modules/review/report-accommodation-comment-card/report-accommodation-comment-card.component.css
@@ -19,3 +19,17 @@ mat-card {
   margin-left: 30px;
   margin-right: 30px;
 }
+
+.btn-stilizovano {
+  background-color: #808080; /* Siva pozadina */
+  border: none;
+  color: white;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 4px; /* Blago zaobljeni uglovi */
+}
