--- a/ProjectIKS/src/app/modules/review/report-guest-create/report-guest-create.component.css
+++ b/ProjectIKS/src/app/modules/review/report-guest-create/report-guest-create.component.css
@@ -96,4 +96,17 @@ button:hover {
   background-color: white;
   color: #006600;
 }
+.btn-stilizovano {
+  background-color: #808080; /* Siva pozadina */
+  border: none;
+  color: white;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 4px; /* Blago zaobljeni uglovi */
+}
 
