--- a/ProjectIKS/src/app/modules/review/review-owner-details/review-owner-details.component.css
+++ b/ProjectIKS/src/app/modules/review/review-owner-details/review-owner-details.component.css
@@ -60,3 +60,16 @@ mat-progress-bar{
   margin-right: 0;
 }
 
+.btn-stilizovano {
+  background-color: #808080; /* Siva pozadina */
+  border: none;
+  color: white;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 4px; /* Blago zaobljeni uglovi */
+}
