Fixing some bugs in reviews and reports.

--- a/ProjectIKS/src/app/modules/layout/administrator-navbar/administrator-navbar.component.html
+++ b/ProjectIKS/src/app/modules/layout/administrator-navbar/administrator-navbar.component.html
@@ -5,7 +5,9 @@
     <button (click)="EditProfile()"  style="float: right" mat-raised-button >Profile</button>
     <button (click)="Aprove()" style="float: right" mat-raised-button >Approve</button>
     <button (click)="UserReports()" style="float: right" mat-raised-button >User reports</button>
-    <button (click)="ReviewReports()" style="float: right" mat-raised-button >Reviews reports</button>
+    <button (click)="ReviewReports()" style="float: right" mat-raised-button >Accommodation reviews</button>
+    <button (click)="ReviewOwnerReports()" style="float: right" mat-raised-button >Owner reviews</button>
+
 
   </div>
 </mat-toolbar>
