--- a/ProjectIKS/src/app/modules/layout/super-admin-navbar/super-admin-navbar.component.html
+++ b/ProjectIKS/src/app/modules/layout/super-admin-navbar/super-admin-navbar.component.html
@@ -1,6 +1,9 @@
 <mat-toolbar>
   <div>
+    <h1 (click)="home()" class="title">Home</h1>
     <button (click)="Logout()" style="float: right" mat-raised-button >Logout</button>
-    <button (click)="Logout()" style="float: right" mat-raised-button >Logout</button>
+    <button (click)="Requests()" style="float: right" mat-raised-button >Logout</button>
   </div>
 </mat-toolbar>
+
+
