--- a/ProjectIKS/src/app/modules/superadmin/certificates/certificates.component.html
+++ b/ProjectIKS/src/app/modules/superadmin/certificates/certificates.component.html
@@ -1,1 +1,33 @@
 <app-super-admin-navbar></app-super-admin-navbar>
+<mat-tree [dataSource]="dataSource" [treeControl]="treeControl">
+  <mat-tree-node *matTreeNodeDef="let node" matTreeNodeToggle>
+    <li class="mat-tree-node">
+      <button mat-icon-button matTreeNodeToggle>
+        <mat-icon class="mat-icon-folder">
+          folder
+        </mat-icon>
+      </button>
+      {{node.name}}
+    </li>
+  </mat-tree-node>
+
+  <mat-nested-tree-node *matTreeNodeDef="let node; when: hasChild">
+    <li>
+      <div class="mat-tree-node">
+        <button mat-icon-button matTreeNodeToggle
+                [attr.aria-label]="'toggle ' + node.name">
+          <mat-icon class="mat-icon-folder">
+            {{treeControl.isExpanded(node) ? 'folder_open' : 'folder'}}
+          </mat-icon>
+        </button>
+        {{node.name}}
+      </div>
+      <ul [class.mat-tree-node]="!treeControl.isExpanded(node)">
+        <ng-container *ngIf="treeControl.isExpanded(node)">
+          <ng-container matTreeNodeOutlet></ng-container>
+        </ng-container>
+      </ul>
+    </li>
+  </mat-nested-tree-node>
+</mat-tree>
+
