add interceptor for certificate

--- a/ProjectIKS/src/app/modules/layout/super-admin-navbar/super-admin-navbar.component.html
+++ b/ProjectIKS/src/app/modules/layout/super-admin-navbar/super-admin-navbar.component.html
@@ -2,8 +2,6 @@
   <div>
     <h1 (click)="home()" class="title">Home</h1>
     <button (click)="Logout()" style="float: right" mat-raised-button >Logout</button>
-    <button (click)="Requests()" style="float: right" mat-raised-button >Logout</button>
+    <button (click)="Requests()" style="float: right" mat-raised-button >Requests</button>
   </div>
 </mat-toolbar>
-
-
