--- a/ProjectIKS/src/app/modules/owner/certificate-request/certificate-request.component.html
+++ b/ProjectIKS/src/app/modules/owner/certificate-request/certificate-request.component.html
@@ -22,9 +22,10 @@
   <label for="unit">Organization Unit Name:</label><br>
   <input type="text" id="unit" name="unit"><br><br>
 
-  <label for="commonName">Common Name:</label><br>
-  <input type="text" id="commonName" name="commonName"><br><br>
-
+  <label for="firstName">First name:</label><br>
+  <input type="text" id="firstName" name="firstName"><br><br>
+  <label for="lastName">Last name:</label><br>
+  <input type="text" id="lastName" name="lastName"><br><br>
   <label for="email">Email Address:</label><br>
   <input type="email" id="email" name="email"><br><br>
   <button type="button" (click)="submit()" id="submitButton">Submit</button>
